feat(profile): add pipeline profiler and component options cache
Introduces a new `profile` command to the CLI to measure the performance of the decomposition pipeline against a set of queries.

The new `PipelineProfiler` runs specified or default example queries and generates a report including timing, partition counts, and cache statistics.

To improve performance, a cache for `ComponentOptions` has been added to `PartitionValidator`. This significantly speeds up the validation of repeated components across different partitions. The profiler reports on the cache hit/miss rate.

The `DecompositionPipeline` has been refactored to allow for the injection of the `PartitionValidator`, enabling shared cache state and statistics collection during profiling.